--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                                 </ul>
                             </li>
                             <li><a href="#">Discounted Products</a></li>
+                            <li><a href="#">Become a seller</a></li>
                         </ul>
                         <div class="mobile-auth">
                            <button>Login/Register</button>
